# pydantic-ai-temporal-example

./: .gitignore  GITHUB_PR_CHECK.md  Makefile  README.md  package.json  pyproject.toml  pytest.ini
docs/: github_agent_guide.md
docs/blog/: writing-blog-posts-with-github-agents.md
pydantic_temporal_example/: __init__.py  api.py  app.py  cli.py  config.py  dependencies.py  models.py  settings.py  slack.py
pydantic_temporal_example/agents/: dinner_research_agent.py  dispatch_agent.py  github_agent.py  web_research_agent.py
pydantic_temporal_example/temporal/: __init__.py  client.py  slack_activities.py  worker.py  workflows.py
pydantic_temporal_example/tools/: __init__.py  jina_search.py
src/pydantic_temporal_example/: __init__.py  api.py  app.py  cli.py  config.py  dependencies.py  models.py
src/pydantic_temporal_example/agents/: __init__.py  dispatch_agent.py  github_agent.py  instruction_templates.py  registry.py  web_research_agent.py
src/pydantic_temporal_example/temporal/: __init__.py  client.py  generic_workflows.py  github_activities.py  slack_activities.py  worker.py  workflows.py
src/pydantic_temporal_example/tools/: __init__.py  jina_search.py  pygithub.py  slack.py
tests/: test_api_handlers.py  test_cli_api.py  test_cli_functions.py  test_jina_search.py  test_models.py  test_pygithub.py  test_slack_verification.py  test_temporal_client.py  test_temporal_github_activities.py  test_temporal_slack_activities.py
